Correct z-index of side menu

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -199,7 +199,7 @@ body * > {
 
 .settings-panel {
     position: absolute;
-    z-index: 1;
+    z-index: 40000;
     left: -300px;
     top: 0;
     width: 250px;
@@ -533,6 +533,7 @@ input[type=email] {
 .udacity-book-container {
     max-width: 100%;
     margin: 2em auto 2em auto;
+    z-index: -1;
 }
 
 .leave-your-memory {
